# single_cell_perturb_seq

./: LICENSE  README.md  build_executable.sh
benchmarking/: README.md
guiderna/: README.md  binarize_umi_count.R  guiderna_tool
guiderna/demo/: guides1.txt  guides2.txt
guiderna/source_codes/: Cargo.toml
guiderna/source_codes/src/: guiderna_tool.rs  main.rs
hashtag/: README.md  barcodes.txt  hashtag.txt  hashtag_tool
hashtag/source_codes/: Cargo.toml  README.md
hashtag/source_codes/src/: hashtag_tool.rs  main.rs
