[package]
name = "guiderna_tool"
version = "0.1.0"
authors = ["gaofan83 <gaofan83@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
needletail = "^0.3.2"
clap = "~2.33"
csv = "1.1.3"
itertools = "0.9.0"
subprocess = "0.1.11"

